# scipy

./: .gitattributes  .gitignore  ACT-USAGE.md  INSTALL.rst.txt  INSTALL.txt  MANIFEST.in  MESON_BUILD.md  README.rst  THANKS.txt  azure-pipelines.yml  cross_aarch64.ini  default.nix  dev.py  environment.yml  environment_meson.yml  flake.nix  meson.build  mesondev.sh  mypy.ini  pavement.py  pyproject.toml  setup.py
.github/: CODEOWNERS
scipy/: __config__.py  __init__.pxd  __init__.py  _distributor_init.py  meson.build  setup.py  version.py
scipy/_build_utils/: copyfiles.py  tempita.py
scipy/_build_utils/src/: npy_cblas.h
scipy/_lib/: _array_api.py  _ccallback.py  _ccallback_c.pyx  _testutils.py  meson.build
scipy/_lib/_uarray/: _uarray_dispatch.cxx  meson.build
scipy/_lib/npymath/: config.h  ieee754.c  meson.build  npy_config.h
scipy/_lib/src/: messagestream.h  messagestream_config.h.in
scipy/_lib/tests/: meson.build  test__util.py  test_public_api.py
scipy/cluster/: _hierarchy.pyx  bscript  meson.build  vq.py
scipy/cluster/tests/: meson.build  test_disjoint_set.py  test_hierarchy.py  test_vq.py
scipy/constants/: __init__.py  _constants.py  meson.build
scipy/constants/tests/: meson.build  test_codata.py
scipy/diff/: __init__.py  _derivative.py  _derivative_numdiff.py  _epsilon_generator.py  _hessian_numdiff.py  _jacobian_numdiff.py  _step_generators.py
scipy/diff/numdifftools/: _step_generators.py
scipy/diff/numdifftools/tests/: test__step_generators.py
scipy/diff/statsmodels/: _derivative.py  _epsilon_generator.py
scipy/diff/statsmodels/tests/: test__derivative.py
scipy/diff/tests/: test__derivative.py  test__derivative_numdiff.py  test__jacobian_numdiff.py  test__step_generators.py
scipy/fft/: meson.build
scipy/fft/_pocketfft/: meson.build
scipy/fft/_pocketfft/tests/: meson.build
scipy/fft/tests/: meson.build  test_basic.py  test_real_transforms.py
scipy/fftpack/: meson.build
scipy/fftpack/tests/: meson.build
scipy/integrate/: __quadpack.h  bento.info  meson.build  quadpack.h  quadpack.py
scipy/integrate/_ivp/: meson.build
scipy/integrate/_ivp/tests/: meson.build
scipy/integrate/tests/: banded5x5.pyf  meson.build  test_quadpack.py
scipy/interpolate/: __init__.py  _ppoly.pyx  fitpack.py  fitpack2.py  generate_interpnd.py  interpnd.pyx  interpolate.py  meson.build
scipy/interpolate/src/: _fitpackmodule.c
scipy/interpolate/tests/: meson.build  test_interpolate.py  test_polyint.py
scipy/io/: meson.build  netcdf.py
scipy/io/_matlab/: meson.build
scipy/io/_matlab/tests/: meson.build
scipy/io/arff/: meson.build
scipy/io/arff/tests/: meson.build
scipy/io/harwell_boeing/: meson.build
scipy/io/harwell_boeing/tests/: meson.build
scipy/io/matlab/: meson.build
scipy/io/matlab/tests/: meson.build
scipy/io/tests/: meson.build  test_netcdf.py
scipy/linalg/: __init__.pxd  __init__.py  _decomp_update.pyx.in  _generate_pyx.py  basic.py  bento.info  flapack.pyf.src  lapack.py  meson.build  setup.py
scipy/linalg/tests/: meson.build  test_basic.py  test_blas.py  test_cho_solve_threading.py  test_lapack.py
scipy/linalg/tests/data/: meson.build
scipy/misc/: __init__.py  meson.build
scipy/misc/tests/: meson.build
scipy/ndimage/: meson.build  setup.py
scipy/ndimage/tests/: meson.build
scipy/odr/: __odrpack.c  meson.build
scipy/odr/tests/: meson.build
scipy/optimize/: __init__.pxd  __init__.py  _basinhopping.py  _lbfgsb_py.py  _nonlin.py  _optimize.py  _shgo.py  _slsqp_py.py  _tnc.py  _tstutils.py  anneal.py  cobyla.py  lbfgsb.py  linesearch.py  meson.build  minpack.py  nnls.py  nonlin.py  optimize.py  slsqp.py  tnc.py  zeros.py
scipy/optimize/_highs/: meson.build
scipy/optimize/_lsq/: meson.build
scipy/optimize/_shgo_lib/: meson.build
scipy/optimize/_trlib/: meson.build
scipy/optimize/_trustregion_constr/: meson.build
scipy/optimize/_trustregion_constr/tests/: meson.build
scipy/optimize/cython_optimize/: meson.build
scipy/optimize/tests/: meson.build  test_cobyla.py  test_linesearch.py  test_minpack.py  test_nonlin.py  test_optimize.py  test_zeros.py
scipy/signal/: __init__.py  _api.py  _backend.py  _multimethods.py  _spectral_py.py  _wavelets.py  cont2discrete.py  filter_design.py  info.py  ltisys.py  meson.build  signaltools.py
scipy/signal/tests/: meson.build  mock_backend.py  test_backend.py  test_bsplines.py  test_cont2discrete.py  test_ltisys.py  test_peak_finding.py  test_signaltools.py  test_spectral.py  test_waveforms.py  test_windows.py
scipy/signal/windows/: meson.build
scipy/sparse/: generate_sparsetools.py  meson.build  spfuncs.py
scipy/sparse/csgraph/: meson.build
scipy/sparse/csgraph/tests/: meson.build
scipy/sparse/linalg/: meson.build
scipy/sparse/linalg/_dsolve/: linsolve.py
scipy/sparse/linalg/_eigen/: meson.build
scipy/sparse/linalg/_propack/: meson.build  second.c
scipy/sparse/linalg/dsolve/: meson.build
scipy/sparse/linalg/eigen/: meson.build
scipy/sparse/sparsetools/: meson.build
scipy/sparse/tests/: meson.build
scipy/spatial/: bento.info  ckdtree.cpp  meson.build  setup.py
scipy/spatial/ckdtree/: ckdtree.pyx
scipy/spatial/src/: distance_wrap.c
scipy/spatial/tests/: meson.build  test_kdtree.py
scipy/spatial/transform/: meson.build
scipy/special/: __init__.pxd  _complexstuff.h  _cosine.c  _generate_pyx.py  _support_alternative_backends.py  amos_wrappers.h  cdf_wrappers.h  generate_ufuncs.py  meson.build  specfun_wrappers.h
scipy/special/_precompute/: meson.build
scipy/special/tests/: meson.build  test_basic.py  test_hyp2f1.py
scipy/special/utils/: makenpz.py
scipy/stats/: __init__.py  _continuous_distns.py  _discrete_distns.py  _distn_infrastructure.py  _generate_pyx.py  distributions.py  meson.build  morestats.py  mstats.py  mstats_basic.py  stats.py
scipy/stats/_boost/: meson.build
scipy/stats/_unuran/: meson.build
scipy/stats/tests/: common_tests.py  meson.build  test_contingency.py  test_continuous_basic.py  test_discrete_basic.py  test_distributions.py  test_morestats.py  test_mstats_basic.py  test_stats.py
(+76 files in other folders)
