fitpack_src = ['fitpack/fpclos.f',
  'fitpack/sphere.f',
  'fitpack/cocosp.f',
  'fitpack/fpched.f',
  'fitpack/fppocu.f',
  'fitpack/fprota.f',
  'fitpack/fppara.f',
  'fitpack/fpcyt1.f',
  'fitpack/fpgivs.f',
  'fitpack/concon.f',
  'fitpack/fpperi.f',
  'fitpack/curev.f',
  'fitpack/concur.f',
  'fitpack/fpcuro.f',
  'fitpack/parsur.f',
  'fitpack/bispev.f',
  'fitpack/parcur.f',
  'fitpack/fpknot.f',
  'fitpack/fprpsp.f',
  'fitpack/fppasu.f',
  'fitpack/fpsuev.f',
  'fitpack/fpgrdi.f',
  'fitpack/fpback.f',
  'fitpack/surfit.f',
  'fitpack/fpsphe.f',
  'fitpack/fpdeno.f',
  'fitpack/fppogr.f',
  'fitpack/fpsurf.f',
  'fitpack/fptrpe.f',
  'fitpack/fpcosp.f',
  'fitpack/splint.f',
  'fitpack/fpgrre.f',
  'fitpack/fpfrno.f',
  'fitpack/fprppo.f',
  'fitpack/parder.f',
  'fitpack/fpseno.f',
  'fitpack/fpintb.f',
  'fitpack/fpsysy.f',
  'fitpack/fporde.f',
  'fitpack/fpcyt2.f',
  'fitpack/fpgrsp.f',
  'fitpack/fpgrpa.f',
  'fitpack/fpchep.f',
  'fitpack/surev.f',
  'fitpack/fpcons.f',
  'fitpack/polar.f',
  'fitpack/fpinst.f',
  'fitpack/fpbacp.f',
  'fitpack/fpregr.f',
  'fitpack/fpspgr.f',
  'fitpack/fpadno.f',
  'fitpack/fpcsin.f',
  'fitpack/fpdisc.f',
  'fitpack/splev.f',
  'fitpack/fptrnp.f',
  'fitpack/fourco.f',
  'fitpack/dblint.f',
  'fitpack/pardeu.f',
  'fitpack/fpbspl.f',
  'fitpack/fprank.f',
  'fitpack/bispeu.f',
  'fitpack/fpbisp.f',
  'fitpack/clocur.f',
  'fitpack/fpcoco.f',
  'fitpack/pogrid.f',
  'fitpack/fppola.f',
  'fitpack/spalde.f',
  'fitpack/fpopdi.f',
  'fitpack/sproot.f',
  'fitpack/fpader.f',
  'fitpack/fpadpo.f',
  'fitpack/fpcurf.f',
  'fitpack/splder.f',
  'fitpack/fpbfout.f',
  'fitpack/profil.f',
  'fitpack/fpchec.f',
  'fitpack/curfit.f',
  'fitpack/regrid.f',
  'fitpack/fprati.f',
  'fitpack/percur.f',
  'fitpack/fpopsp.f',
  'fitpack/evapol.f',
  'fitpack/insert.f',
  'fitpack/spgrid.f',
  'fitpack/cualde.f']

# TODO: Add flags for 64 bit ints
fitpack_lib = static_library('fitpack_lib',
  fitpack_src)

interpnd = py3.extension_module('interpnd',
  ['interpnd.pyx'],
  include_directories: [incdir_numpy],
  dependencies: [py3_dep])

_ppoly = py3.extension_module('_ppoly',
  ['_ppoly.pyx'],
  include_directories: [incdir_numpy],
  dependencies: [py3_dep])